@@ -93,6 +93,7 @@ import org.openmetadata.schema.entity.services.ApiService;
 import org.openmetadata.schema.entity.services.DashboardService;
 import org.openmetadata.schema.entity.services.DatabaseService;
 import org.openmetadata.schema.entity.services.MlModelService;
+import org.openmetadata.schema.entity.tasks.Task;
 import org.openmetadata.schema.entity.teams.Team;
 import org.openmetadata.schema.entity.teams.User;
 import org.openmetadata.schema.governance.workflows.WorkflowDefinition;
@@ -113,13 +114,17 @@ import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.MetricType;
 import org.openmetadata.schema.type.MetricUnitOfMeasurement;
 import org.openmetadata.schema.type.TagLabel;
+import org.openmetadata.schema.type.TaskCategory;
+import org.openmetadata.schema.type.TaskEntityStatus;
+import org.openmetadata.schema.type.TaskResolutionType;
 import org.openmetadata.schema.type.TaskStatus;
-import org.openmetadata.schema.type.TaskType;
 import org.openmetadata.schema.utils.JsonUtils;
 import org.openmetadata.schema.utils.ResultList;
 import org.openmetadata.sdk.client.OpenMetadataClient;
 import org.openmetadata.sdk.exceptions.ApiException;
+import org.openmetadata.sdk.exceptions.ForbiddenException;
 import org.openmetadata.sdk.exceptions.OpenMetadataException;
+import org.openmetadata.sdk.models.ListResponse;
 import org.openmetadata.sdk.network.HttpMethod;
 import org.openmetadata.sdk.network.RequestOptions;
 import org.openmetadata.service.resources.feeds.MessageParser;
@@ -3330,9 +3335,10 @@ public class WorkflowDefinitionResourceIT {
       OpenMetadataClient testUserClient = SdkClients.user3Client();
 
       // Try to suspend without proper authorization
-      ApiException exception =
+      ForbiddenException exception =
           assertThrows(
-              ApiException.class, () -> testUserClient.workflowDefinitions().suspend(workflowFqn));
+              ForbiddenException.class,
+              () -> testUserClient.workflowDefinitions().suspend(workflowFqn));
 
       // Should get 403 Forbidden
       assertEquals(403, exception.getStatusCode(), "Should return 403 for unauthorized user");
@@ -7069,6 +7075,16 @@ public class WorkflowDefinitionResourceIT {
     return total.asLong();
   }
 
+  private ListResponse<Task> listOpenApprovalTasks(OpenMetadataClient client, String entityFqn)
+      throws Exception {
+    Map<String, String> filters = new HashMap<>();
+    filters.put("status", TaskEntityStatus.Open.value());
+    filters.put("category", TaskCategory.Approval.value());
+    filters.put("aboutEntity", entityFqn);
+    filters.put("fields", "assignees,about");
+    return client.tasks().listWithFilters(filters);
+  }
+
   /**
    * Ensures the WorkflowEventConsumer subscription is active for event-based workflow tests.
    * This subscription is required for workflows to receive change events and trigger.
@@ -7144,10 +7160,11 @@ public class WorkflowDefinitionResourceIT {
 
   @Test
   @Order(40)
-  void test_WorkflowWithReviewersOwnersCandidates(TestNamespace ns) throws IOException {
+  void test_WorkflowWithReviewersOwnersCandidates(TestNamespace ns) throws Exception {
     LOG.info("Starting test_WorkflowWithReviewersOwnersCandidates");
 
     OpenMetadataClient client = SdkClients.adminClient();
+    ensureWorkflowEventConsumerIsActive(client);
 
     // Step 1: Create test users (2 candidates + 1 owner)
     LOG.debug("Creating test users for comprehensive assignment testing");
@@ -7229,7 +7246,6 @@ public class WorkflowDefinitionResourceIT {
 
     Table testTable = client.tables().create(createTable);
     LOG.debug("Created test table: {} with owner: {}", testTable.getName(), ownerUser.getName());
-    String tableEntityLink = String.format("<#E::table::%s>", testTable.getFullyQualifiedName());
 
     // Step 4: Create comprehensive workflow with all assignment types
     LOG.debug("Creating workflow with reviewers, owners, and candidates assignment");
@@ -7337,49 +7353,42 @@ public class WorkflowDefinitionResourceIT {
     String workflowId = workflowCreated.get("id").asText();
     LOG.debug("Created comprehensive workflow: {}", workflowId);
 
+    waitForWorkflowDeployment(client, "TableApprovalWorkflow");
+
     // Step 5: Wait for initial workflow processing (table creation event)
+    String tableFqn = testTable.getFullyQualifiedName();
     LOG.info("Waiting for workflow to process table creation...");
     await()
         .atMost(Duration.ofMinutes(2))
         .pollInterval(Duration.ofSeconds(2))
         .until(
             () -> {
-              ResultList<Thread> threads =
-                  client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
-              boolean hasExpectedTasks = !threads.getData().isEmpty();
+              ListResponse<Task> tasks = listOpenApprovalTasks(client, tableFqn);
+              boolean hasExpectedTasks = !tasks.getData().isEmpty();
               if (hasExpectedTasks) {
-                LOG.debug("Found {} tasks for table creation", threads.getData().size());
+                LOG.debug("Found {} tasks for table creation", tasks.getData().size());
               }
               return hasExpectedTasks;
             });
 
     // Step 6: Verify initial task creation and assignees
     LOG.info("Verifying initial task creation and assignees");
-    ResultList<Thread> initialThreads =
-        client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
+    ListResponse<Task> initialTasks = listOpenApprovalTasks(client, tableFqn);
 
-    assertFalse(initialThreads.getData().isEmpty(), "Should have tasks created for table");
+    assertFalse(initialTasks.getData().isEmpty(), "Should have tasks created for table");
 
-    // Should have 1 task with 3 assignees: owner + 2 candidates (reviewers ignored for tables)
-    List<Thread> approvalTasks =
-        initialThreads.getData().stream()
-            .filter(
-                t ->
-                    t.getTask() != null
-                        && org.openmetadata.schema.type.TaskType.RequestApproval.equals(
-                            t.getTask().getType()))
+    List<Task> approvalTasks =
+        initialTasks.getData().stream()
+            .filter(t -> TaskCategory.Approval.equals(t.getCategory()))
             .toList();
 
     assertEquals(1, approvalTasks.size(), "Should have exactly 1 approval task");
     LOG.debug("✓ Found exactly 1 approval task");
 
     // Verify the single task has 3 assignees
-    Thread approvalTask = approvalTasks.get(0);
+    Task approvalTask = approvalTasks.get(0);
     List<String> assigneeNames =
-        approvalTask.getTask().getAssignees().stream()
-            .map(EntityReference::getName)
-            .sorted()
-            .toList();
+        approvalTask.getAssignees().stream().map(EntityReference::getName).sorted().toList();
 
     List<String> expectedAssignees =
         Stream.of(ownerUser.getName(), candidate1.getName(), candidate2.getName())
@@ -7391,8 +7400,10 @@ public class WorkflowDefinitionResourceIT {
     LOG.debug("✓ Verified task has 3 assignees: {}", assigneeNames);
 
     // Verify the task has correct entity reference
-    assertTrue(
-        approvalTask.getAbout().contains(testTable.getFullyQualifiedName()),
+    assertNotNull(approvalTask.getAbout(), "Task should have an about reference");
+    assertEquals(
+        tableFqn,
+        approvalTask.getAbout().getFullyQualifiedName(),
         "Task should reference the test table");
     LOG.debug("✓ Task correctly references the test table");
 
@@ -7413,10 +7424,8 @@ public class WorkflowDefinitionResourceIT {
         .pollInterval(Duration.ofSeconds(2))
         .until(
             () -> {
-              ResultList<Thread> threads =
-                  client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
-              // Should still have exactly 1 task (no duplicates)
-              boolean hasCorrectTaskCount = threads.getData().size() == 1;
+              ListResponse<Task> tasks = listOpenApprovalTasks(client, tableFqn);
+              boolean hasCorrectTaskCount = tasks.getData().size() == 1;
               if (hasCorrectTaskCount) {
                 LOG.debug("Confirmed 1 task exists after update (no duplicates)");
               }
@@ -7425,31 +7434,17 @@ public class WorkflowDefinitionResourceIT {
 
     // Step 9: Verify no duplicate tasks created for update event
     LOG.info("Verifying no duplicate tasks created for update event");
-    ResultList<Thread> updatedThreads =
-        client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
-
-    List<Thread> allApprovalTasks =
-        updatedThreads.getData().stream()
-            .filter(
-                t ->
-                    t.getTask() != null
-                        && org.openmetadata.schema.type.TaskType.RequestApproval.equals(
-                            t.getTask().getType()))
-            .toList();
+    ListResponse<Task> updatedTasks = listOpenApprovalTasks(client, tableFqn);
 
     assertEquals(
         1,
-        allApprovalTasks.size(),
+        updatedTasks.getData().size(),
         "Should still have exactly 1 approval task (no duplicates after update)");
     LOG.debug("✓ Confirmed exactly 1 approval task after update (no duplicates)");
 
-    // Verify the task still has the same 3 assignees
-    Thread updatedTask = allApprovalTasks.getFirst();
+    Task updatedTask = updatedTasks.getData().getFirst();
     List<String> updatedAssignees =
-        updatedTask.getTask().getAssignees().stream()
-            .map(EntityReference::getName)
-            .sorted()
-            .toList();
+        updatedTask.getAssignees().stream().map(EntityReference::getName).sorted().toList();
 
     assertEquals(
         expectedAssignees, updatedAssignees, "Task assignees should remain the same after update");
@@ -7457,34 +7452,40 @@ public class WorkflowDefinitionResourceIT {
 
     // Step 10: Resolve the approval task to test workflow progression
     LOG.info("Resolving the approval task");
-    ResolveTask resolveTask =
-        new ResolveTask().withNewValue(org.openmetadata.schema.type.EntityStatus.APPROVED.value());
+    org.openmetadata.schema.api.tasks.ResolveTask resolveTaskV2 =
+        new org.openmetadata.schema.api.tasks.ResolveTask()
+            .withResolutionType(TaskResolutionType.Approved);
 
-    // Use owner client to resolve since they are an assignee
     OpenMetadataClient ownerClient =
         SdkClients.createClient(ownerUser.getName(), ownerUser.getEmail(), new String[] {});
-    ownerClient.feed().resolveTask(updatedTask.getTask().getId().toString(), resolveTask);
-    LOG.debug("✓ Resolved task: {}", updatedTask.getTask().getId());
+    ownerClient.tasks().resolve(updatedTask.getId().toString(), resolveTaskV2);
+    LOG.debug("✓ Resolved task: {}", updatedTask.getId());
 
-    // Verify task status changed
+    // Verify task status changed to Approved
     await()
         .atMost(Duration.ofSeconds(30))
         .pollInterval(Duration.ofSeconds(2))
         .until(
             () -> {
               try {
-                ResultList<Thread> closedThreads =
-                    client.feed().listTasks(tableEntityLink, TaskStatus.Closed, 10);
-                return !closedThreads.getData().isEmpty();
+                Map<String, String> closedFilters = new HashMap<>();
+                closedFilters.put("status", TaskEntityStatus.Approved.value());
+                closedFilters.put("category", TaskCategory.Approval.value());
+                closedFilters.put("aboutEntity", tableFqn);
+                ListResponse<Task> resolved = client.tasks().listWithFilters(closedFilters);
+                return !resolved.getData().isEmpty();
               } catch (Exception e) {
                 return false;
               }
             });
 
-    ResultList<Thread> closedTasks =
-        client.feed().listTasks(tableEntityLink, TaskStatus.Closed, 10);
-    assertFalse(closedTasks.getData().isEmpty(), "Should have at least one closed task");
-    LOG.debug("✓ Verified task resolution - found {} closed tasks", closedTasks.getData().size());
+    Map<String, String> closedFilters = new HashMap<>();
+    closedFilters.put("status", TaskEntityStatus.Approved.value());
+    closedFilters.put("category", TaskCategory.Approval.value());
+    closedFilters.put("aboutEntity", tableFqn);
+    ListResponse<Task> closedTasks = client.tasks().listWithFilters(closedFilters);
+    assertFalse(closedTasks.getData().isEmpty(), "Should have at least one approved task");
+    LOG.debug("✓ Verified task resolution - found {} approved tasks", closedTasks.getData().size());
 
     // Step 11: Cleanup
     LOG.info("Cleaning up test resources");
@@ -7520,10 +7521,11 @@ public class WorkflowDefinitionResourceIT {
 
   @Test
   @Order(41)
-  void test_WorkflowWithTeamCandidates(TestNamespace ns) throws IOException {
+  void test_WorkflowWithTeamCandidates(TestNamespace ns) throws Exception {
     LOG.info("Starting test_WorkflowWithTeamCandidates");
 
     OpenMetadataClient client = SdkClients.adminClient();
+    ensureWorkflowEventConsumerIsActive(client);
 
     // Step 1: Create test users (2 candidates + 1 owner)
     LOG.debug("Creating test users for team-based assignment testing");
@@ -7618,7 +7620,7 @@ public class WorkflowDefinitionResourceIT {
 
     Table testTable = client.tables().create(createTable);
     LOG.debug("Created test table: {} with owner: {}", testTable.getName(), ownerUser.getName());
-    String tableEntityLink = String.format("<#E::table::%s>", testTable.getFullyQualifiedName());
+    String tableFqn = testTable.getFullyQualifiedName();
 
     // Step 5: Create team-based workflow
     LOG.debug("Creating workflow with team candidates assignment");
@@ -7713,6 +7715,8 @@ public class WorkflowDefinitionResourceIT {
     String workflowId = workflowCreated.get("id").asText();
     LOG.debug("Created team workflow: {}", workflowId);
 
+    waitForWorkflowDeployment(client, "TeamApprovalWorkflow");
+
     // Step 6: Wait for initial workflow processing (table creation event)
     LOG.info("Waiting for workflow to process table creation...");
     await()
@@ -7720,43 +7724,28 @@ public class WorkflowDefinitionResourceIT {
         .pollInterval(Duration.ofSeconds(2))
         .until(
             () -> {
-              ResultList<Thread> threads =
-                  client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
-              boolean hasExpectedTasks = !threads.getData().isEmpty();
+              ListResponse<Task> tasks = listOpenApprovalTasks(client, tableFqn);
+              boolean hasExpectedTasks = !tasks.getData().isEmpty();
               if (hasExpectedTasks) {
-                LOG.debug("Found {} tasks for table creation", threads.getData().size());
+                LOG.debug("Found {} tasks for table creation", tasks.getData().size());
               }
               return hasExpectedTasks;
             });
 
     // Step 7: Verify task creation and assignees (should have 3: owner + 2 team members)
     LOG.info("Verifying initial task creation and assignees");
-    ResultList<Thread> initialThreads =
-        client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
+    ListResponse<Task> initialTasks = listOpenApprovalTasks(client, tableFqn);
 
-    assertFalse(initialThreads.getData().isEmpty(), "Should have tasks created for table");
-
-    List<Thread> allApprovalTasks =
-        initialThreads.getData().stream()
-            .filter(
-                t ->
-                    t.getTask() != null
-                        && TaskType.RequestApproval.equals(t.getTask().getType())
-                        && TaskStatus.Open.equals(t.getTask().getStatus()))
-            .toList();
-
+    assertFalse(initialTasks.getData().isEmpty(), "Should have tasks created for table");
     assertEquals(
         1,
-        allApprovalTasks.size(),
+        initialTasks.getData().size(),
         "Should have exactly 1 approval task (team expands to individual users)");
     LOG.debug("✓ Confirmed exactly 1 approval task created");
 
-    Thread initialTask = allApprovalTasks.getFirst();
+    Task initialTask = initialTasks.getData().getFirst();
     List<String> assigneeNames =
-        initialTask.getTask().getAssignees().stream()
-            .map(EntityReference::getName)
-            .sorted()
-            .toList();
+        initialTask.getAssignees().stream().map(EntityReference::getName).sorted().toList();
 
     List<String> expectedAssignees =
         List.of(ownerUser.getName(), candidate1.getName(), candidate2.getName()).stream()
@@ -7786,36 +7775,20 @@ public class WorkflowDefinitionResourceIT {
         .atMost(Duration.ofSeconds(30))
         .pollInterval(Duration.ofSeconds(2))
         .ignoreExceptions()
-        .until(
-            () ->
-                client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10).getData().size()
-                    >= 1);
+        .until(() -> listOpenApprovalTasks(client, tableFqn).getData().size() >= 1);
 
     LOG.info("Verifying no duplicate tasks created for update event");
-    ResultList<Thread> threadsAfterUpdate =
-        client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
-    List<Thread> allApprovalTasksAfterUpdate =
-        threadsAfterUpdate.getData().stream()
-            .filter(
-                t ->
-                    t.getTask() != null
-                        && TaskType.RequestApproval.equals(t.getTask().getType())
-                        && TaskStatus.Open.equals(t.getTask().getStatus()))
-            .toList();
+    ListResponse<Task> tasksAfterUpdate = listOpenApprovalTasks(client, tableFqn);
 
     assertEquals(
         1,
-        allApprovalTasksAfterUpdate.size(),
+        tasksAfterUpdate.getData().size(),
         "Should still have exactly 1 approval task (no duplicates after update)");
     LOG.debug("✓ Confirmed exactly 1 approval task after update (no duplicates)");
 
-    // Verify the task still has the same 3 assignees
-    Thread updatedTask = allApprovalTasksAfterUpdate.getFirst();
+    Task updatedTask = tasksAfterUpdate.getData().getFirst();
     List<String> updatedAssignees =
-        updatedTask.getTask().getAssignees().stream()
-            .map(EntityReference::getName)
-            .sorted()
-            .toList();
+        updatedTask.getAssignees().stream().map(EntityReference::getName).sorted().toList();
 
     assertEquals(
         expectedAssignees, updatedAssignees, "Task assignees should remain the same after update");
@@ -7823,30 +7796,36 @@ public class WorkflowDefinitionResourceIT {
 
     // Step 10: Resolve the approval task to test workflow progression
     LOG.info("Resolving the approval task");
-    ResolveTask resolveTask =
-        new ResolveTask().withNewValue(org.openmetadata.schema.type.EntityStatus.APPROVED.value());
+    org.openmetadata.schema.api.tasks.ResolveTask resolveTaskV2 =
+        new org.openmetadata.schema.api.tasks.ResolveTask()
+            .withResolutionType(TaskResolutionType.Approved);
 
-    // Use owner client to resolve since they are an assignee
     OpenMetadataClient ownerClient =
         SdkClients.createClient(ownerUser.getName(), ownerUser.getEmail(), new String[] {});
-    ownerClient.feed().resolveTask(updatedTask.getTask().getId().toString(), resolveTask);
-    LOG.debug("✓ Resolved task: {}", updatedTask.getTask().getId());
+    ownerClient.tasks().resolve(updatedTask.getId().toString(), resolveTaskV2);
+    LOG.debug("✓ Resolved task: {}", updatedTask.getId());
 
-    // Verify task status changed
+    // Verify task status changed to Approved
     await()
         .atMost(Duration.ofSeconds(30))
         .pollInterval(Duration.ofSeconds(2))
         .ignoreExceptions()
         .until(
-            () ->
-                client.feed().listTasks(tableEntityLink, TaskStatus.Closed, 10).getData().size()
-                    >= 1);
+            () -> {
+              Map<String, String> approvedFilters = new HashMap<>();
+              approvedFilters.put("status", TaskEntityStatus.Approved.value());
+              approvedFilters.put("category", TaskCategory.Approval.value());
+              approvedFilters.put("aboutEntity", tableFqn);
+              return client.tasks().listWithFilters(approvedFilters).getData().size() >= 1;
+            });
 
-    ResultList<Thread> closedThreads =
-        client.feed().listTasks(tableEntityLink, TaskStatus.Closed, 10);
-    List<Thread> closedTasks = closedThreads.getData();
-    assertEquals(1, closedTasks.size(), "Should have exactly 1 closed task");
-    LOG.debug("✓ Task successfully resolved and closed");
+    Map<String, String> approvedFilters = new HashMap<>();
+    approvedFilters.put("status", TaskEntityStatus.Approved.value());
+    approvedFilters.put("category", TaskCategory.Approval.value());
+    approvedFilters.put("aboutEntity", tableFqn);
+    ListResponse<Task> approvedTasks = client.tasks().listWithFilters(approvedFilters);
+    assertEquals(1, approvedTasks.getData().size(), "Should have exactly 1 approved task");
+    LOG.debug("✓ Task successfully resolved and approved");
 
     // Step 11: Cleanup test resources
     LOG.info("Cleaning up test resources");
@@ -7889,6 +7868,7 @@ public class WorkflowDefinitionResourceIT {
   void test_TagChangeApprovalWithIncludeFields(TestNamespace ns) throws Exception {
     LOG.info("Testing Tag change approval workflow with include fields feature");
     OpenMetadataClient client = SdkClients.adminClient();
+    ensureWorkflowEventConsumerIsActive(client);
 
     String uniqueSuffix = String.valueOf(System.currentTimeMillis());
 
@@ -8055,8 +8035,10 @@ public class WorkflowDefinitionResourceIT {
 
     LOG.info("✓ Tag approval workflow with include fields created and verified successfully");
 
+    waitForWorkflowDeployment(client, "TagApprovalWorkflow");
+
     // Test workflow triggering: Update table with Private tag - should trigger workflow
-    String tableEntityLink = String.format("<#E::table::%s>", table.getFullyQualifiedName());
+    String tableFqn = table.getFullyQualifiedName();
     LOG.info("Testing positive case: updating tags to Private (should trigger approval)");
 
     String privatePatchJson =
@@ -8072,12 +8054,11 @@ public class WorkflowDefinitionResourceIT {
         .pollInterval(Duration.ofSeconds(2))
         .until(
             () -> {
-              ResultList<Thread> threads =
-                  client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
-              return !threads.getData().isEmpty();
+              ListResponse<Task> tasks = listOpenApprovalTasks(client, tableFqn);
+              return !tasks.getData().isEmpty();
             });
 
-    ResultList<Thread> privateTasks = client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
+    ListResponse<Task> privateTasks = listOpenApprovalTasks(client, tableFqn);
     assertFalse(privateTasks.getData().isEmpty(), "Should have approval task for Private tag");
     assertEquals(1, privateTasks.getData().size(), "Should have exactly 1 approval task");
     LOG.debug("✓ Private tag change triggered approval task");
@@ -8097,8 +8078,7 @@ public class WorkflowDefinitionResourceIT {
         .pollDelay(Duration.ofSeconds(3))
         .untilAsserted(
             () -> {
-              ResultList<Thread> publicTasks =
-                  client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
+              ListResponse<Task> publicTasks = listOpenApprovalTasks(client, tableFqn);
               assertEquals(
                   1,
                   publicTasks.getData().size(),
@@ -8127,6 +8107,7 @@ public class WorkflowDefinitionResourceIT {
   void test_DomainChangeApprovalWithIncludeFields(TestNamespace ns) throws Exception {
     LOG.info("Testing Domain change approval workflow with include fields feature");
     OpenMetadataClient client = SdkClients.adminClient();
+    ensureWorkflowEventConsumerIsActive(client);
 
     String uniqueSuffix = String.valueOf(System.currentTimeMillis());
 
@@ -8280,8 +8261,10 @@ public class WorkflowDefinitionResourceIT {
 
     LOG.info("✓ Domain approval workflow with include fields created and verified successfully");
 
+    waitForWorkflowDeployment(client, "DomainApprovalWorkflow");
+
     // Test workflow triggering: Update table domain to Finance - should trigger workflow
-    String tableEntityLink = String.format("<#E::table::%s>", table.getFullyQualifiedName());
+    String tableFqn = table.getFullyQualifiedName();
     LOG.info("Testing positive case: updating domain to Finance (should trigger approval)");
 
     String financePatchJson =
@@ -8297,12 +8280,11 @@ public class WorkflowDefinitionResourceIT {
         .pollInterval(Duration.ofSeconds(2))
         .until(
             () -> {
-              ResultList<Thread> threads =
-                  client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
-              return !threads.getData().isEmpty();
+              ListResponse<Task> tasks = listOpenApprovalTasks(client, tableFqn);
+              return !tasks.getData().isEmpty();
             });
 
-    ResultList<Thread> domainTasks = client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
+    ListResponse<Task> domainTasks = listOpenApprovalTasks(client, tableFqn);
     assertFalse(domainTasks.getData().isEmpty(), "Should have approval task for Finance domain");
     assertEquals(1, domainTasks.getData().size(), "Should have exactly 1 approval task");
     LOG.debug("✓ Finance domain change triggered approval task");
@@ -8333,8 +8315,7 @@ public class WorkflowDefinitionResourceIT {
         .pollDelay(Duration.ofSeconds(3))
         .untilAsserted(
             () -> {
-              ResultList<Thread> marketingTasks =
-                  client.feed().listTasks(tableEntityLink, TaskStatus.Open, 10);
+              ListResponse<Task> marketingTasks = listOpenApprovalTasks(client, tableFqn);
               assertEquals(
                   1,
                   marketingTasks.getData().size(),
@@ -8362,6 +8343,7 @@ public class WorkflowDefinitionResourceIT {
   void test_IncludeFieldsPriorityOverExclude(TestNamespace ns) throws Exception {
     LOG.info("Testing include fields have priority over exclude fields");
     OpenMetadataClient client = SdkClients.adminClient();
+    ensureWorkflowEventConsumerIsActive(client);
 
     // Create test user for task ownership
     CreateUser createUser =
@@ -8514,6 +8496,8 @@ public class WorkflowDefinitionResourceIT {
 
     LOG.info("✓ Include priority workflow created with both include and exclude fields verified");
 
+    waitForWorkflowDeployment(client, "includePriorityWorkflow");
+
     // Test: Update table with the specific tag - should trigger workflow despite exclude
     String tagPatchJson =
         String.format(
@@ -8529,25 +8513,16 @@ public class WorkflowDefinitionResourceIT {
     LOG.info("✓ Table updated with included tag: {}", tag.getFullyQualifiedName());
 
     // Wait for workflow to process and check if approval task was created
-    String tableEntityLink = String.format("<#E::table::%s>", table.getFullyQualifiedName());
+    String tableFqn = table.getFullyQualifiedName();
     await()
         .atMost(Duration.ofSeconds(60))
         .pollInterval(Duration.ofSeconds(2))
         .pollDelay(Duration.ofSeconds(1))
         .untilAsserted(
             () -> {
-              ResultList<Thread> threads =
-                  client.feed().listTasks(tableEntityLink, TaskStatus.Open, 100);
-              boolean approvalTaskFound =
-                  !threads.getData().isEmpty()
-                      && threads.getData().stream()
-                          .anyMatch(
-                              thread ->
-                                  thread.getTask() != null
-                                      && TaskType.RequestApproval.equals(
-                                          thread.getTask().getType()));
+              ListResponse<Task> tasks = listOpenApprovalTasks(client, tableFqn);
               assertTrue(
-                  approvalTaskFound,
+                  !tasks.getData().isEmpty(),
                   "Approval task should be created when include field matches, even with exclude field present");
             });
     LOG.info("✓ Approval task created successfully - include field priority verified");
@@ -8577,6 +8552,7 @@ public class WorkflowDefinitionResourceIT {
   void test_EmptyIncludeFieldsBehavior(TestNamespace ns) throws Exception {
     LOG.info("Testing empty include fields maintains backward compatibility");
     OpenMetadataClient client = SdkClients.adminClient();
+    ensureWorkflowEventConsumerIsActive(client);
 
     // Create test user for task ownership
     String randomSuffix = UUID.randomUUID().toString().substring(0, 8);
@@ -8701,6 +8677,8 @@ public class WorkflowDefinitionResourceIT {
     LOG.info(
         "✓ Empty include fields workflow created successfully - backward compatibility verified");
 
+    waitForWorkflowDeployment(client, "workflow_" + randomSuffix);
+
     // Test: Create a table - should trigger workflow (backward compatibility)
     CreateTable createTable =
         new CreateTable()
@@ -8715,25 +8693,17 @@ public class WorkflowDefinitionResourceIT {
 
     // Wait for workflow to process and check if approval task was created (empty include should
     // trigger for all)
-    String tableEntityLink = String.format("<#E::table::%s>", table.getFullyQualifiedName());
+    String tableFqn = table.getFullyQualifiedName();
     await()
         .atMost(Duration.ofSeconds(60))
         .pollInterval(Duration.ofSeconds(2))
         .pollDelay(Duration.ofSeconds(1))
         .untilAsserted(
             () -> {
-              ResultList<Thread> threads =
-                  client.feed().listTasks(tableEntityLink, TaskStatus.Open, 100);
-              boolean approvalTaskFound =
-                  !threads.getData().isEmpty()
-                      && threads.getData().stream()
-                          .anyMatch(
-                              thread ->
-                                  thread.getTask() != null
-                                      && TaskType.RequestApproval.equals(
-                                          thread.getTask().getType()));
+              ListResponse<Task> tasks = listOpenApprovalTasks(client, tableFqn);
               assertTrue(
-                  approvalTaskFound, "Empty include fields should behave like normal workflow");
+                  !tasks.getData().isEmpty(),
+                  "Empty include fields should behave like normal workflow");
             });
     LOG.info("✓ Approval task created successfully - backward compatibility maintained");
 
@@ -8776,6 +8746,7 @@ public class WorkflowDefinitionResourceIT {
   void test_MultipleFieldChangesWithIncludeFields(TestNamespace ns) throws Exception {
     LOG.info("Testing workflow with include fields for multiple different field types");
     OpenMetadataClient client = SdkClients.adminClient();
+    ensureWorkflowEventConsumerIsActive(client);
 
     // Create test user for task ownership
     String randomSuffix = UUID.randomUUID().toString().substring(0, 8);
@@ -8932,6 +8903,8 @@ public class WorkflowDefinitionResourceIT {
 
     LOG.info("✓ Multi-field include workflow created with both tag and domain includes verified");
 
+    waitForWorkflowDeployment(client, "workflow_" + randomSuffix);
+
     // Test 1: Update table with tag - should trigger workflow
     String tagPatchJson =
         String.format(
@@ -8947,24 +8920,17 @@ public class WorkflowDefinitionResourceIT {
     LOG.info("✓ Table updated with tag: {}", tag.getFullyQualifiedName());
 
     // Wait for workflow to process and check if approval task was created for tag change
-    String secondTableEntityLink = String.format("<#E::table::%s>", table.getFullyQualifiedName());
+    String tableFqn = table.getFullyQualifiedName();
     await()
         .atMost(Duration.ofSeconds(60))
         .pollInterval(Duration.ofSeconds(2))
         .pollDelay(Duration.ofSeconds(1))
         .untilAsserted(
             () -> {
-              ResultList<Thread> threads =
-                  client.feed().listTasks(secondTableEntityLink, TaskStatus.Open, 100);
-              boolean tagTaskFound =
-                  !threads.getData().isEmpty()
-                      && threads.getData().stream()
-                          .anyMatch(
-                              thread ->
-                                  thread.getTask() != null
-                                      && TaskType.RequestApproval.equals(
-                                          thread.getTask().getType()));
-              assertTrue(tagTaskFound, "Approval task should be created for tag field change");
+              ListResponse<Task> tasks = listOpenApprovalTasks(client, tableFqn);
+              assertTrue(
+                  !tasks.getData().isEmpty(),
+                  "Approval task should be created for tag field change");
             });
     LOG.info("✓ Approval task created for tag change");
 
@@ -8975,7 +8941,6 @@ public class WorkflowDefinitionResourceIT {
             domain.getId(), domain.getName(), domain.getFullyQualifiedName());
     JsonNode domainPatch = MAPPER.readTree(domainPatchJson);
     Table updatedTableWithDomain = client.tables().patch(table.getId(), domainPatch);
-    // Refresh table to get domain information
     updatedTableWithDomain = client.tables().get(table.getId().toString(), "domains");
     assertNotNull(updatedTableWithDomain.getDomains());
     assertFalse(updatedTableWithDomain.getDomains().isEmpty());
@@ -8989,18 +8954,10 @@ public class WorkflowDefinitionResourceIT {
         .pollDelay(Duration.ofSeconds(1))
         .untilAsserted(
             () -> {
-              ResultList<Thread> threads =
-                  client.feed().listTasks(secondTableEntityLink, TaskStatus.Open, 100);
-              boolean domainTaskFound =
-                  !threads.getData().isEmpty()
-                      && threads.getData().stream()
-                          .anyMatch(
-                              thread ->
-                                  thread.getTask() != null
-                                      && TaskType.RequestApproval.equals(
-                                          thread.getTask().getType()));
+              ListResponse<Task> tasks = listOpenApprovalTasks(client, tableFqn);
               assertTrue(
-                  domainTaskFound, "Approval task should be created for domain field change");
+                  tasks.getData().size() >= 2,
+                  "Approval task should be created for domain field change");
             });
     LOG.info(
         "✓ Approval task created for domain change - OR logic verified for multiple include fields");
@@ -9043,9 +9000,10 @@ public class WorkflowDefinitionResourceIT {
 
   @Test
   @Order(42)
-  void test_CheckChangeDescriptionTask(TestNamespace ns) throws IOException {
+  void test_CheckChangeDescriptionTask(TestNamespace ns) throws Exception {
     LOG.info("Starting test_CheckChangeDescriptionTask");
     OpenMetadataClient client = SdkClients.adminClient();
+    ensureWorkflowEventConsumerIsActive(client);
     String uniqueSuffix = String.valueOf(System.currentTimeMillis());
 
     // Step 1: Create 2 user clients as owners
@@ -9307,8 +9265,7 @@ public class WorkflowDefinitionResourceIT {
 
     // Step 6: Update dbSchema1 with Finance domain and verify task creation
     LOG.info("Testing Finance domain update on dbSchema1");
-    String schema1EntityLink =
-        String.format("<#E::databaseSchema::%s>", dbSchema1.getFullyQualifiedName());
+    String schema1Fqn = dbSchema1.getFullyQualifiedName();
 
     String domainPatchJson =
         String.format(
@@ -9341,8 +9298,7 @@ public class WorkflowDefinitionResourceIT {
         .until(
             () -> {
               try {
-                ResultList<Thread> tasks =
-                    client.feed().listTasks(schema1EntityLink, TaskStatus.Open, 10);
+                ListResponse<Task> tasks = listOpenApprovalTasks(client, schema1Fqn);
                 boolean hasTask = !tasks.getData().isEmpty();
                 if (hasTask) {
                   LOG.debug("✓ Found task for Finance domain change");
@@ -9354,19 +9310,19 @@ public class WorkflowDefinitionResourceIT {
               }
             });
 
-    ResultList<Thread> financeTasks =
-        client.feed().listTasks(schema1EntityLink, TaskStatus.Open, 10);
+    ListResponse<Task> financeTasks = listOpenApprovalTasks(client, schema1Fqn);
     assertFalse(financeTasks.getData().isEmpty(), "Should have approval task for Finance domain");
-    Thread financeTask = financeTasks.getData().get(0);
+    Task financeTask = financeTasks.getData().getFirst();
     LOG.debug("Found Finance domain task: {}", financeTask.getId());
 
     // Step 7: Approve the Finance domain task
     LOG.info("Approving Finance domain task");
     OpenMetadataClient owner1Client =
         SdkClients.createClient(owner1.getName(), owner1.getEmail(), new String[] {});
-    ResolveTask resolveFinanceTask =
-        new ResolveTask().withNewValue(org.openmetadata.schema.type.EntityStatus.APPROVED.value());
-    owner1Client.feed().resolveTask(financeTask.getTask().getId().toString(), resolveFinanceTask);
+    org.openmetadata.schema.api.tasks.ResolveTask resolveFinanceTask =
+        new org.openmetadata.schema.api.tasks.ResolveTask()
+            .withResolutionType(TaskResolutionType.Approved);
+    owner1Client.tasks().resolve(financeTask.getId().toString(), resolveFinanceTask);
     LOG.debug("✓ Resolved Finance domain task");
 
     // Step 8: Update dbSchema1 with PII.Sensitive tag and verify task creation
@@ -9402,9 +9358,8 @@ public class WorkflowDefinitionResourceIT {
         .until(
             () -> {
               try {
-                ResultList<Thread> tasks =
-                    client.feed().listTasks(schema1EntityLink, TaskStatus.Open, 10);
-                boolean hasNewTask = tasks.getData().size() > 0; // Should have new task
+                ListResponse<Task> tasks = listOpenApprovalTasks(client, schema1Fqn);
+                boolean hasNewTask = !tasks.getData().isEmpty();
                 if (hasNewTask) {
                   LOG.debug("✓ Found task for PII.Sensitive tag change");
                 }
@@ -9415,22 +9370,22 @@ public class WorkflowDefinitionResourceIT {
               }
             });
 
-    ResultList<Thread> piiTasks = client.feed().listTasks(schema1EntityLink, TaskStatus.Open, 10);
+    ListResponse<Task> piiTasks = listOpenApprovalTasks(client, schema1Fqn);
     assertFalse(piiTasks.getData().isEmpty(), "Should have approval task for PII.Sensitive tag");
-    Thread piiTask = piiTasks.getData().get(0);
+    Task piiTask = piiTasks.getData().getFirst();
     LOG.debug("Found PII.Sensitive tag task: {}", piiTask.getId());
 
     // Step 9: Resolve the PII.Sensitive tag task
     LOG.info("Resolving PII.Sensitive tag task");
-    ResolveTask resolvePiiTask =
-        new ResolveTask().withNewValue(org.openmetadata.schema.type.EntityStatus.APPROVED.value());
-    owner1Client.feed().resolveTask(piiTask.getTask().getId().toString(), resolvePiiTask);
+    org.openmetadata.schema.api.tasks.ResolveTask resolvePiiTask =
+        new org.openmetadata.schema.api.tasks.ResolveTask()
+            .withResolutionType(TaskResolutionType.Approved);
+    owner1Client.tasks().resolve(piiTask.getId().toString(), resolvePiiTask);
     LOG.debug("✓ Resolved PII.Sensitive tag task");
 
     // Step 10: Update dbSchema2 with PII.NonSensitive tag, verify NO tasks created
     LOG.info("Testing PII.NonSensitive tag update on dbSchema2 - should NOT create task");
-    String schema2EntityLink =
-        String.format("<#E::databaseSchema::%s>", dbSchema2.getFullyQualifiedName());
+    String schema2Fqn = dbSchema2.getFullyQualifiedName();
 
     // Create a tag that's not in the include list
     CreateClassification createTestClassification =
@@ -9476,8 +9431,7 @@ public class WorkflowDefinitionResourceIT {
         .pollInterval(Duration.ofSeconds(2))
         .untilAsserted(
             () -> {
-              ResultList<Thread> tasks =
-                  client.feed().listTasks(schema2EntityLink, TaskStatus.Open, 10);
+              ListResponse<Task> tasks = listOpenApprovalTasks(client, schema2Fqn);
               assertTrue(tasks.getData().isEmpty(), "Should NOT have task for non-included tag");
             });
     LOG.debug("✓ Confirmed no task created for non-included tag");
@@ -9516,8 +9470,7 @@ public class WorkflowDefinitionResourceIT {
         .pollInterval(Duration.ofSeconds(2))
         .untilAsserted(
             () -> {
-              ResultList<Thread> tasks =
-                  client.feed().listTasks(schema2EntityLink, TaskStatus.Open, 10);
+              ListResponse<Task> tasks = listOpenApprovalTasks(client, schema2Fqn);
               assertTrue(tasks.getData().isEmpty(), "Should NOT have task for non-included domain");
             });
     LOG.debug("✓ Confirmed no task created for non-included domain");
@@ -9545,10 +9498,11 @@ public class WorkflowDefinitionResourceIT {
 
   @Test
   @Order(42)
-  void test_SelfApprovalPrevention(TestNamespace ns) throws IOException {
+  void test_SelfApprovalPrevention(TestNamespace ns) throws Exception {
     LOG.info("Starting test_SelfApprovalPrevention");
 
     OpenMetadataClient client = SdkClients.adminClient();
+    ensureWorkflowEventConsumerIsActive(client);
     String uniqueSuffix = String.valueOf(System.currentTimeMillis());
 
     // Step 1: Create three users
@@ -9730,6 +9684,8 @@ public class WorkflowDefinitionResourceIT {
     String workflowId = workflowCreated.get("id").asText();
     LOG.debug("Created self-approval prevention workflow: {}", workflowId);
 
+    waitForWorkflowDeployment(client, "SelfApprovalPreventionWorkflow");
+
     // Step 4: Create client for user1 and update classification (user1 making the change and is a
     // reviewer)
     LOG.debug("Creating admin client for user1 and updating classification with reviewers");
@@ -9793,102 +9749,37 @@ public class WorkflowDefinitionResourceIT {
     // Step 5: Wait and verify task creation
     LOG.info("Waiting for workflow to process classification update and create approval task...");
 
+    String classificationFqn = classification.getFullyQualifiedName();
+
     await()
         .atMost(Duration.ofSeconds(30))
         .pollInterval(Duration.ofSeconds(2))
         .untilAsserted(
             () -> {
-              try {
-                String feedResponse =
-                    user1Client
-                        .getHttpClient()
-                        .executeForString(
-                            HttpMethod.GET,
-                            "/v1/feed?type=Task",
-                            null,
-                            RequestOptions.builder().build());
+              ListResponse<Task> tasks = listOpenApprovalTasks(client, classificationFqn);
 
-                JsonNode feedData = MAPPER.readTree(feedResponse);
-                JsonNode threads = feedData.get("data");
+              assertFalse(
+                  tasks.getData().isEmpty(), "Expected to find approval task for classification");
 
-                boolean foundTask = false;
-                boolean selfApprovalPrevented = false;
+              Task approvalTask = tasks.getData().getFirst();
+              List<String> assigneeNames =
+                  approvalTask.getAssignees().stream().map(EntityReference::getName).toList();
 
-                for (JsonNode thread : threads) {
-                  LOG.debug("Checking thread: {}", thread);
-                  if (thread.has("task")) {
-                    JsonNode task = thread.get("task");
-                    LOG.debug("Found task: {}", task);
+              LOG.debug("Task assignees: {}", assigneeNames);
 
-                    // Check if thread has about field (about is on the Thread, not the Task)
-                    if (!thread.has("about") || thread.get("about") == null) {
-                      LOG.debug("Thread missing 'about' field, skipping");
-                      continue;
-                    }
+              boolean user1InAssignees = assigneeNames.contains(user1.getName());
+              boolean user2InAssignees = assigneeNames.contains(user2.getName());
+              boolean user3InAssignees = assigneeNames.contains(user3.getName());
 
-                    String taskAbout = thread.get("about").asText();
-                    LOG.debug("Thread about: {}", taskAbout);
+              LOG.debug(
+                  "Task assignees analysis: user1 (updater) in assignees: {}, user2 in assignees: {}, user3 in assignees: {}",
+                  user1InAssignees,
+                  user2InAssignees,
+                  user3InAssignees);
 
-                    if (taskAbout.contains(classification.getFullyQualifiedName())) {
-                      foundTask = true;
-                      LOG.debug("Found matching task for classification");
-
-                      if (!task.has("assignees") || task.get("assignees") == null) {
-                        LOG.warn("Task missing 'assignees' field");
-                        continue;
-                      }
-
-                      JsonNode assignees = task.get("assignees");
-                      LOG.debug("Task assignees: {}", assignees);
-
-                      // Verify that user1 (the updater) is NOT in the assignees due to
-                      // self-approval prevention
-                      boolean user1InAssignees = false;
-                      boolean user2InAssignees = false;
-                      boolean user3InAssignees = false;
-
-                      for (JsonNode assignee : assignees) {
-                        if (assignee.has("name") && assignee.get("name") != null) {
-                          String assigneeName = assignee.get("name").asText();
-                          LOG.debug("Checking assignee: {}", assigneeName);
-                          if (user1.getName().equals(assigneeName)) {
-                            user1InAssignees = true;
-                          }
-                          if (user2.getName().equals(assigneeName)) {
-                            user2InAssignees = true;
-                          }
-                          if (user3.getName().equals(assigneeName)) {
-                            user3InAssignees = true;
-                          }
-                        }
-                      }
-
-                      LOG.debug(
-                          "Task assignees analysis: user1 (updater) in assignees: {}, user2 in assignees: {}, user3 in assignees: {}",
-                          user1InAssignees,
-                          user2InAssignees,
-                          user3InAssignees);
-
-                      // Self-approval prevention: user1 should NOT be in assignees, but user2,
-                      // user3 should be
-                      selfApprovalPrevented =
-                          !user1InAssignees && user2InAssignees && user3InAssignees;
-                      break;
-                    }
-                  }
-                }
-
-                assertTrue(foundTask, "Expected to find approval task for classification");
-                assertTrue(
-                    selfApprovalPrevented,
-                    "Self-approval prevention failed: creator should not be in assignees");
-
-              } catch (Exception e) {
-                LOG.error("Error during task verification: {}", e.getMessage());
-                fail(
-                    "Failed to verify task creation and self-approval prevention: "
-                        + e.getMessage());
-              }
+              assertFalse(user1InAssignees, "User1 (updater) should NOT be in assignees");
+              assertTrue(user2InAssignees, "User2 should be in assignees");
+              assertTrue(user3InAssignees, "User3 should be in assignees");
             });
 
     LOG.info("✓ Verified that self-approval prevention is working correctly");
